Fix bug: hide elements when screen size is too small

--- a/src/client/src/components/dashboard/tasks/Tasks.module.css
+++ b/src/client/src/components/dashboard/tasks/Tasks.module.css
@@ -32,6 +32,7 @@
   flex: 1;
   max-height: 55px;
   align-items: flex-end;
+  margin-bottom: 10px;
 }
 
 .headerTitle {
